--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -27,15 +27,20 @@
   name = "Publications"
   url = "#featured"
   weight = 50
+  
+[[main]]
+  name = "Accomplishments"
+  url = "#awards"
+  weight = 60
 
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 60
+  weight = 70
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/media/resume.pdf` and uncomment the lines below.
 [[main]]
    name = "CV"
    url = "media/resume.pdf"
-    weight = 70
+    weight = 80
