--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -5,37 +5,37 @@
 
 [[main]]
   name = "Home"
-  url = "#about"
+  url = "#home/"
   weight = 10
 
 # [[main]]
 #  name = "Posts"
-#  url = "#posts"
+#  url = "#posts/"
 #  weight = 20
 
 #[[main]]
 #  name = "Projects"
-#  url = "#projects"
+#  url = "#projects/"
 #  weight = 30
 
 # [[main]]
 #  name = "Talks"
-#  url = "#talks"
+#  url = "#talks/"
 #  weight = 40
 
 [[main]]
   name = "Publications"
-  url = "#featured"
+  url = "#publications/"
   weight = 50
   
 [[main]]
   name = "Accomplishments"
-  url = "#awards"
+  url = "#accomplishments/"
   weight = 60
 
 [[main]]
   name = "Contact"
-  url = "#contact"
+  url = "#contact/"
   weight = 70
 
 # Link to a PDF of your resume/CV from the menu.
