--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -263,7 +263,7 @@ plugins_js  = []
   #   "google": Google Maps
   #   "mapnik": OpenStreetMap (Mapnik)
   #   "mapbox": OpenStreetMap (Mapbox)
-  provider = "mapbox"
+  provider = "google"
   api_key = ""
   zoom = 15
 
