--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -5,7 +5,7 @@
 
 [[main]]
   name = "Home"
-  url = "about/"
+  url = "/about/"
   weight = 10
 
 # [[main]]
@@ -25,17 +25,17 @@
 
 [[main]]
   name = "Publications"
-  url = "featured/"
+  url = "/featured/"
   weight = 50
   
 [[main]]
   name = "Accomplishments"
-  url = "accomplishments/"
+  url = "/accomplishments/"
   weight = 60
 
 [[main]]
   name = "Contact"
-  url = "contact/"
+  url = "/contact/"
   weight = 70
 
 # Link to a PDF of your resume/CV from the menu.
