--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -5,7 +5,7 @@
 
 [[main]]
   name = "Home"
-  url = "#about/"
+  url = "/#about/"
   weight = 10
 
 # [[main]]
@@ -25,12 +25,12 @@
 
 [[main]]
   name = "Publications"
-  url = "#featured/"
+  url = "/#featured/"
   weight = 20
   
 [[main]]
   name = "Accomplishments"
-  url = "#accomplishments/"
+  url = "/#accomplishments/"
   weight = 30
 
 [[main]]
