--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -23,10 +23,16 @@
 #  url = "#talks/"
 #  weight = 40
 
+
 [[main]]
   name = "Publications"
-  url = "/#featured/"
+  url = "/#publications/"
   weight = 20
+
+[[main]]
+  name = "Featured"
+  url = "/#featured/"
+  weight = 25
   
 [[main]]
   name = "Accomplishments"
